--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nativescript-datetimepicker": "^1.2.2",
     "nativescript-floatingactionbutton": "^5.1.0",
     "nativescript-material-datetimepicker": "^1.0.9",
+    "nativescript-unit-test-runner": "^0.7.0",
     "pouchdb": "^7.2.1",
     "pouchdb-adapter-localstorage": "^7.2.1",
     "pouchdb-adapter-memory": "^7.2.1",
@@ -58,17 +59,22 @@
     "@angular/compiler-cli": "~8.2.0",
     "@nativescript/schematics": "~1.0.0",
     "@nativescript/tslint-rules": "~0.0.5",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "3.5.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
+    "jasmine": "~3.3.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "5.0.8",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-nativescript-launcher": "0.4.0",
+    "karma-webpack": "3.0.5",
+    "mobile-devices-controller": "^5.2.3",
+    "nativescript-dev-appium": "^6.1.3",
     "nativescript-dev-webpack": "~1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
@@ -77,6 +83,5 @@
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.1.0.",
   "main": "karma.conf.js",
-  "author": "",
   "license": "ISC"
 }
