--- a/angular.json
+++ b/angular.json
@@ -106,7 +106,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "todo:serve"
+            "devServerTarget": "todo:serve:e2e"
           },
           "configurations": {
             "production": {
