--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo",
   "nativescript": {
-    "id": "org.nephroaid.test",
+    "id": "org.nephroaid.todo",
     "tns-android": {
       "version": "6.5.0"
     }
@@ -11,7 +11,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "android": "tns run android",
@@ -74,7 +73,6 @@
     "karma-nativescript-launcher": "0.4.0",
     "karma-webpack": "3.0.5",
     "mobile-devices-controller": "^5.2.3",
-    "nativescript-dev-appium": "^6.1.3",
     "nativescript-dev-webpack": "~1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
